--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
-<html>
-  <title>
-    First Website
-  </title>
+<!DOCTYPE html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <body>
-    <h1> This is my first github page </h1>
-  </body>
+  <title> Jenn Cho | Official Website </title>
 
-  <style>
-    body {
-      background-color: rgb(255, 204, 228);
-      color: #fff;
-      text-align: center;
-    }
-  </style>
+
 </html>
