--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title> Jenn Cho | Official Website </title>
-
-
+    <title> Jenn Cho | Official Website </title>
+    <body>
+      hello, world 
+    </body>
 </html>
