--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
     <title> Jenn Cho | Official Website </title>
     <body>
-      hello, world 
+      hello, world! my name is jenn.. i am stlll figuring out this website. 
     </body>
 </html>
